--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@types/react-datepicker": "^6.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dom-to-image": "^2.6.0",
@@ -25,6 +26,7 @@
     "next": "14.1.4",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-datepicker": "^7.1.0",
     "react-dom": "^18",
     "react-tooltip": "^5.26.3",
     "tailwind-merge": "^2.2.2",
