--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18",
     "react-datepicker": "^7.1.0",
     "react-dom": "^18",
+    "react-select": "^5.8.0",
     "react-tooltip": "^5.26.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
